<resources>
    <string name="app_name">MyApp</string>

    <!-- number -->
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_point">.</string>
    <string name="number_del">c</string>
    <!-- number -->
    <string name="success">验证成功</string>
    <string name="failure">验证失败</string>

    <string name="scan_by_alipay">支付宝</string>
    <string name="scan_by_wechat">微信</string>

</resources>
